Starting on the project popover list

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 </head>
 
-<body class="slides scroll simplifiedMobile defaultScroll">
+<body class="slides scroll animated simplifiedMobile defaultScroll">
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 	  <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
@@ -274,25 +274,25 @@
 												<h3>IKANO</h3>
 												<p>BRF Skogsstjärnan</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="wide soft-shadow img-border-radius" alt="Projekt foto av BRF Skogsstjärnan"/>
+												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="wide soft-shadow img-border-radius" alt="Projektfoto av BRF Skogsstjärnan"/>
 											</li>
 											<li>
 												<h3>SKANSKA</h3>
 												<p>BRF The View</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_theview.jpg" class="wide soft-shadow img-border-radius" alt="Projekt foto av BRF The View"/>
+												<img src="assets/img/projects/brf_theview.jpg" class="wide soft-shadow img-border-radius" alt="Projektfoto av BRF The View"/>
 											</li>
 											<li>
 												<h3>EINAR MATSSON</h3>
 												<p>BRF Haganova</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_haganova.jpg" class="wide soft-shadow img-border-radius" alt="Projekt foto av BRF Haganova"/>
+												<img src="assets/img/projects/brf_haganova.jpg" class="wide soft-shadow img-border-radius" alt="Projektfoto av BRF Haganova"/>
 											</li>
 											<li>
 												<h3>BYGGVESTA</h3>
 												<p>BRF Terrassen</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_terrassen.jpg" class="wide soft-shadow img-border-radius" alt="Projekt foto av BRF Terrassen"/>
+												<img src="assets/img/projects/brf_terrassen.jpg" class="wide soft-shadow img-border-radius" alt="Projektfoto av BRF Terrassen"/>
 											</li>
 										</ul>
 										<ul class="controller center dots ae-3 fromBottom margin-bottom-2" data-slider-id="83">
@@ -1221,66 +1221,183 @@
 	<div class="popup white" data-popup-id="ispect-projects">
 		<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
-			<!-- Slide #67 -->
-			<section class="slide white kenBurns">
-				<div class="content">
-					<div class="container">
-						<div class="container-lg">
+			<div class="wrap spaces">
+				<!-- contents -->
+				<section class="slide white">
+					<div class="content">
+						<div class="container">
+							<div class="container-lg">
 
-							<div class="fix-10-12 center toCenter margin-top-1">
-								<h1 class="ae-1">Våra projekt</h1>
-								<div class="ae-2">
+								<div class="fix-10-12 center toCenter margin-top-1">
+									<h1>Våra projekt</h1>
 									<p>Här byggs framtiden med noll fel</p>
 								</div>
-							</div>
-							<div class="fix-12-12">
-								<ul class="grid later fixedSpaces equal left">
-									<li class="col-4-12 fromCenter">
-										<div class="box-67">
-											<div class="thumbnail-67">
-												<img src="assets/img/projects/brf_theview.jpg" class="wide" />
-											</div>
-											<div class="name-67 equalElement table wide">
-												<div class="cell">
-													<div class="category-67">SKANSKA</div>
-													<div class="title-67">BRF The View</div>
+									<div class="fix-12-12">
+										<ul class="grid later fixedSpaces equal left margin-top-5 items-container controller popupTrigger" data-popup-id="items-popup" data-slider-id="items-popup" >
+											<li class="col-4-12 ae-3 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_kanotbryggan.jpg" class="wide" alt="Projektvisualisering av BRF Kanot Bryggan"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">ALM Equity</div>
+															<div class="title-67">BRF Kanotbryggan</div>
+														</div>
+													</div>
 												</div>
-											</div>
-										</div>
-									</li>
-									<li class="col-4-12 fromCenter">
-										<div class="box-67">
-											<div class="thumbnail-67">
-												<img src="assets/img/projects/brf_terrassen.jpg" class="wide" />
-											</div>
-											<div class="name-67 equalElement table wide">
-												<div class="cell">
-													<div class="category-67">BYGGVESTA</div>
-													<div class="title-67">BRF Terrassen</div>
+											</li>
+											<li class="col-4-12 ae-4 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_sjohusen.jpg" class="wide" alt="Projektvisualisering av BRF Sjöhusen"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">AROS Bostadsutveckling AB</div>
+															<div class="title-67">Brf Sjöhusen 3 </div>
+														</div>
+													</div>
 												</div>
-											</div>
-										</div>
-									</li>
-									<li class="col-4-12 fromCenter">
-										<div class="box-67">
-											<div class="thumbnail-67">
-												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="wide" />
-											</div>
-											<div class="name-67 equalElement table wide">
-												<div class="cell">
-													<div class="category-67">IKANO</div>
-													<div class="title-67">BRF Skogsstjärnan</div>
+											</li>
+											<li class="col-4-12 ae-5 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_studion.jpg" class="wide" alt="Projektvisualisering av BRF Studion"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">BESQAB</div>
+															<div class="title-67">BRF Studion</div>
+														</div>
+													</div>
 												</div>
-											</div>
-										</div>
-									</li>
-								</ul>
-							</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_loftet.jpg" class="wide" alt="Projektvisualisering av BRF Loftet"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">BESQAB</div>
+															<div class="title-67">BRF Loftet</div>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_hydrografen.jpg" class="wide" alt="Projektvisualisering av BRF Hydrografen"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">Brickhouse</div>
+															<div class="title-67">BRF Hydrografen</div>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_tradbussen_sorgenfri.jpg" class="wide" alt="Projektvisualisering av BRF Sorgenfri"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">Byggvesta</div>
+															<div class="title-67">Sorgenfri</div>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_bryggvagen.jpg" class="wide" alt="Projektvisualisering av BRF Bryggvägen"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">Byggvesta</div>
+															<div class="title-67">Bryggvägen</div>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_garvaren.jpg" class="wide" alt="Projektvisualisering av BRF Garvaren"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">Byggvesta</div>
+															<div class="title-67">BRF Garvaren</div>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_ektorp.jpg" class="wide" alt="Projektvisualisering av BRF Ektorp"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">Byggvesta</div>
+															<div class="title-67">Ektorp</div>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_etaget.jpg" class="wide" alt="Projektvisualisering av BRF Etaget"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">EBAB</div>
+															<div class="title-67">BRF Etaget</div>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_taklampan.png" class="wide" alt="Projektvisualisering av BRF Taklampan"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">Einar Mattsson</div>
+															<div class="title-67">BRF Taklampan</div>
+														</div>
+													</div>
+												</div>
+											</li>
+											<li class="col-4-12 fromCenter">
+												<div class="box-67">
+													<div class="thumbnail-67">
+														<img src="assets/img/projects/brf_haganova.jpg" class="wide" alt="Projektvisualisering av BRF HagaNovaz"/>
+													</div>
+													<div class="name-67 equalElement table wide">
+														<div class="cell">
+															<div class="category-67">Einar Mattsson</div>
+															<div class="title-67">BRF HagaNova</div>
+														</div>
+													</div>
+												</div>
+											</li>
+										</ul>
+									</div>
 
+							</div>
 						</div>
 					</div>
-				</div>
-			</section>
+				</section>
+			</div>
 		</div>
 	</div>
 	<!-- Scripts -->
