Managed to get the logos animation to work!

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -246,127 +246,97 @@
 		</div>
 	</section>
 
-	<section class="slide whiteSlide margin-bottom-10" id="partners">
-		<div class="content">
-			<div class="container-lg">
-				<div class="wrap">
-
-					<div class="fix-10-12 left margin-bottom-8">
-						<h1>Några uppdragsgivare och samarbetspartners</h1>
-					</div>
-					<div class="fix-10-12 margin-bottom-5">
-						<ul class="grid equal later">
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/ssm.png" alt="SSM" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/ebab-logo.png" alt="Ebab" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="80" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="140" src="../assets/img/logos/ikano_red.png" alt="ikano" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/sollentunahem.png" alt="Sollentunahem" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/ffab.png" alt="FFAB" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/ncc.png" alt="NCC" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/em.jpg" alt="EM" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="150" src="../assets/img/logos/skanska.png" alt="SKANSKA" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="80" src="../assets/img/logos/byggvesta.png" alt="Byggvesta" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/nordea.svg" alt="Nordea" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/pedersen.jpg" alt="Pedersen" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class="wide equalElement">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class=" wide equalElement ae-5">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/hifab.jpg" alt="HIFAB" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class=" wide equalElement ae-6">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/icontrol.png" alt="icontrolapp.se" />
-									</div>
-								</div>
-							</li>
-						</ul>
-					</div>
-
-				</div>
+	<section class="slide whiteSlide margin-bottom-2">
+		<div class="container-lg">
+			<div class="wrap">
+				<h1 class="fix-10-12">Några uppdragsgivare och samarbetspartners</h1>
 			</div>
 		</div>
+	</section>
+
+	<section class="slide whiteSlide network margin-bottom-10" id="partners">
+					<div class="container-lg">
+						<div class="logos center">
+
+							<div class="row center-xs">
+									<ul class="fromLeft">
+										<li class="margin-bottom-3">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/ssm.png" alt="SSM" />
+											</div>
+										</li>
+										<li class="margin-bottom-3">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/ebab-logo.png" alt="Ebab" />
+											</div>
+										</li>
+										<li class="margin-bottom-3">
+											<div class="network-logo">
+												<img width="80" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
+											</div>
+										</li>
+										<li class="margin-bottom-3">
+											<div class="network-logo">
+												<img width="140" src="../assets/img/logos/ikano_red.png" alt="ikano" />
+											</div>
+										</li>
+										<li class="margin-bottom-3">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/sollentunahem.png" alt="Sollentunahem" />
+											</div>
+										</li>
+										<li class="margin-bottom-3">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/ffab.png" alt="FFAB" />
+											</div>
+										</li>
+										<li class="margin-bottom-3">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/ncc.png" alt="NCC" />
+											</div>
+										</li>
+										<li class="margin-bottom-3">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/em.jpg" alt="EM" />
+											</div>
+										</li>
+									</ul>
+									<ul class="">
+										<li class="margin-bottom-5">
+											<div class="network-logo">
+												<img width="80" src="../assets/img/logos/byggvesta.png" alt="Byggvesta" />
+											</div>
+										</li>
+										<li class="margin-bottom-5">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/nordea.svg" alt="Nordea" />
+											</div>
+										</li>
+										<li class="margin-bottom-5">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/pedersen.jpg" alt="Pedersen" />
+											</div>
+										</li>
+										<li class="margin-bottom-5">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW" />
+											</div>
+										</li>
+										<li class="margin-bottom-5">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/hifab.jpg" alt="HIFAB" />
+											</div>
+										</li>
+										<li class="margin-bottom-5">
+											<div class="network-logo">
+												<img width="100" src="../assets/img/logos/icontrol.png" alt="icontrolapp.se" />
+											</div>
+										</li>
+									</ul>
+							</div>
+
+						</div>
+					</div>
 	</section>
 
 <!-- Footer -->
