Switched to normal pop downs

--- a/index.html
+++ b/index.html
@@ -124,14 +124,15 @@
 			"theme": "light-floating"
 		};
 	</script>
-
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
 	<!-- End Cookie Consent plugin -->
-
+	<script>
+	  window.disableKeyNavigation = 0;
+	</script>
 
 </head>
 
-<body class="slides scroll animated simplifiedMobile defaultScroll">
+<body class="slides scroll simplifiedMobile defaultScroll">
 	<!-- SVG Library -->
 	<svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 	  <symbol id="close" viewBox="0 0 30 30"><path d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z"/></symbol>
@@ -218,7 +219,7 @@
 	</nav>
 
 	<!-- HEADER -->
-	<section class="slide fade" data-name="home" id="">
+	<section class="slide fade autoHeight" data-name="home" id="">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
@@ -235,7 +236,7 @@
 		<div class="background" style="background-image:url(assets/img/backgrounds/goldengate.jpg)" alt="Foto av Golden Gate under sin konstruktion"></div>
 	</section>
 	<!-- ENTERPRISE START -->
-	<section class="slide whiteSlide fromLeft" id="entreprenad">
+	<section class="slide whiteSlide fromLeft autoHeight" id="entreprenad">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -308,7 +309,7 @@
 
 
 	<!-- OUR SERVICES -->
-	<section class="slide fade kenBurns" id="erbjudande">
+	<section class="slide fade autoHeight" id="erbjudande">
 		<div class="content">
 			<div class="container" style="height: 360px;">
 				<div class="wrap">
@@ -325,7 +326,7 @@
 	</section>
 
 	<!-- ENTERPRISE -->
-	<section class="slide whiteSlide kenBurns fromRight" data-name="foretag" data-title="foretag" id="foretag">
+	<section class="slide whiteSlide fromRight autoHeight" data-name="foretag" data-title="foretag" id="foretag">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -389,7 +390,7 @@
 	</section>
 
 	<!-- ESTATES -->
-	<section class="slide whiteSlide kenBurns fromRight" data-name="brf" data-title="brf" id="brf">
+	<section class="slide whiteSlide fromRight autoHeight" data-name="brf" data-title="brf" id="brf">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -445,7 +446,7 @@
 	</section>
 
 	<!-- PRIVATE -->
-	<section class="slide whiteSlide kenBurns fromLeft" data-name="privat" data-title="privat" id="privat">
+	<section class="slide whiteSlide kenBurns fromLeft autoHeight" data-name="privat" data-title="privat" id="privat">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -501,7 +502,7 @@
 		</div>
 	</section>
 	<!-- ISPECT -->
-	<section class="slide whiteSlide kenBurns fromRight" data-name="ispect" data-title="ispect" id="ispect">
+	<section class="slide whiteSlide kenBurns fromRight autoHeight" data-name="ispect" data-title="ispect" id="ispect">
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -565,7 +566,7 @@
 		</div>
 	</div>
 <!-- Footer -->
-<section class="slide customFooter">
+<section class="slide customFooter autoHeight">
   <div class="content">
     <div class="container-lg">
       <div class="wrap">
