--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -51,83 +51,107 @@
 
 </head>
 <body class="slides scroll animated simplifiedMobile defaultScroll">
-
-	<header class="cd-morph-dropdown soft-shadow panel top">
-		<div class="container-lg">
-
-				<a href="#0" class="nav-trigger">Open Nav<span aria-hidden="true"></span></a>
-				<div class="left fromLeft">
-					<a href="../../" id="logo"><img src="../../assets/svg/bm_logo.svg" alt="Besiktningsman.se" width="200px"></a>
-				</div>
-				<div class="main-nav right fromRight">
-						<ul class="menu crop small bold center">
-							<li class="has-dropdown gallery" data-content="about">
-								<a href="#0">Tjänster</a>
-							</li>
-
-							<li class="has-dropdown links" data-content="pricing">
-								<a href="#0">Om oss</a>
-							</li>
-
-							<li class="has-dropdown contact" data-content="contact">
-								<a href="#0">Kontakt</a>
-							</li>
-						</ul>
-						<ul class="menu crop small bold">
-							<li><a href="../../kontakt/" class="text-blue">Kundkontakt</a></li>
-						</ul>
-				</div>
-		</div>
-		<div class="morph-dropdown-wrapper">
-			<div class="dropdown-list left small bold">
-				<ul>
-					<li id="about" class="dropdown gallery">
-						<h4>Tjänster</h4>
-
-						<div class="morph-dropdown-content">
-							<ul>
-								<li><a href="#0">Entreprenad</a></li>
-								<li><a href="#0">Bostadsförening</a></li>
-								<li><a href="#0">Privat</a></li>
-							</ul>
-						</div>
+	<!-- Panel Top #10 -->
+	<nav class="panel top forceMobileView white soft-shadow">
+		<div class="sections desktop">
+			<div class="left">
+				<ul class="menu crop small bold">
+					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu">
+						Dokument
 					</li>
-
-					<li id="pricing" class="dropdown links">
-
-						<div class="morph-dropdown-content">
-							<ul>
-								<li>
-									<h4>Om oss</h4>
-									<ul>
-										<li><a href="#0">Publicerat & Press</a></li>
-										<li><a href="#0">Om företaget</a></li>
-										<li><a href="#0">Karriär</a></li>
-										<li><a href="#0">Projekt</a></li>
-									</ul>
-								</li>
-							</ul>
-						</div>
-					</li>
-
-					<li id="contact" class="dropdown button">
-						<h4>Kontakt</h4>
-						<div class="morph-dropdown-content">
-							<ul>
-								<li><a href="#0">Bokning Entreprenad</a></li>
-								<li><a href="#0">Bokning BRF / Privat</a></li>
-								<li><a href="#0">Generella frågor</a></li>
-							</ul>
-						</div>
-					</li>
+					<li><a href="nyheter/">Publicerat & Press</a></li>
+					<li><a href="om_oss/">Om oss</a></li>
 				</ul>
+			</div>
+			<div class="center">
+				<a href="../"> <img src="../../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="width:200px;"> </a>
+			</div>
+			<div class="right">
+				<ul class="menu crop small bold">
+					<!-- <li><a href="#erbjudande">Vårt erbjudande</a></li>
+					<li><a href="karriar/">Karriär</a></li>
+					<li><a href="kontakt/" class="text-blue">Kundkontakt</a></li> -->
+					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu">Vårt erbjudande<svg class="dropdown-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#drop-down"></use></svg></li>
+	        <li tabindex="2" class="dropdownTrigger" data-dropdown-id="dropdown-menu2">More on Click <svg class="dropdown-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#drop-down"></use></svg></li>
+				</ul>
+			</div>
+		</div>
+		<div class="sections compact hidden">
+			<div class="left">
+				<a href="https://mavko.github.io/bm_se/"><img src="../../assets/svg/bm_logo.svg" alt="Besiktningsman.se" style="width:200px;"></a>
+			</div>
+			<div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span></div>
+		</div>
+	</nav>
 
-				<div class="bg-layer" aria-hidden="true"></div>
-			</div> <!-- dropdown-list -->
-		</div> <!-- morph-dropdown-wrapper -->
-	</header>
+	<!-- Sidebar -->
+	<nav class="sidebar white" data-sidebar-id="1">
+		<div class="close"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#close"></use></svg></div>
+		<div class="content">
+			<a href="/" class="logo"><img src="../../assets/svg/bm_logo.svg" alt=""></a>
+			<ul class="mainMenu text-blue">
+				<h2 class="bold small text-blueGrey">Navigation</h2>
+				<li><a href="#erbjudande"><p>Vårt erbjudande</p></a></li>
+				<br>
+				<br>
+				<li><a href="kontakt/"><p>Kundkontakt</p></a></li>
+				<br>
+				<br>
+				<li><a href="karriar/"><p>Karriär</p></a></li>
+				<br>
+				<br>
+				<li><a href="om_oss/"><p>Om oss</p></a></li>
+				<br>
+				<br>
+				<li><a href="nyheter/"><p>Publicerat & Press</p></a></li>
+				<br>
+				<br>
+				<h2 class="bold small text-blueGrey">Dokument</h2>
+				<li><a href="#"><p class="small bold">Besiktningsboken</p></a></li>
+				<br>
+				<br>
+				<li><a href="#"><p class="small bold">Lagbok 1</p></a></li>
+				<br>
+				<br>
+				<li><a href="#"><p class="small bold">Lagbok 2</p></a></li>
+			</ul>
+
+		</div>
+	</nav>
+
+
+<!-- Menu dropdown -->
+<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu">
+  <ul>
+    <li class=""><div class="checkmark"></div><a href="../tjanster/entreprenad">Entreprenad</a></li>
+    <li class=""><div class="checkmark"></div><a href="../tjanster/brf">Bostadsförening</a></li>
+    <li class=""><div class="checkmark"></div><a href="../tjanster/privat">Privat</a></li>
+  </ul>
+</div>
+
+<!-- Menu dropdown -->
+<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu2">
+  <ul>
+    <li class="link"><a href="http://google.com" target="_blank">Exernal Link</a></li>
+    <li class="toSlide-1">Slide 1</li>
+    <li class="toSlide-2">Slide 2</li>
+    <li class="toSlide-3">Slide 3</li>
+    <li class="dropdownTrigger" data-dropdown-id="dropdown-menu3">More items <i class="material-icons" style="float: right">more_vert</i></li>
+  </ul>
+</div>
+
+<!-- Menu dropdown 3 -->
+<div class="dropdown left center noArrow customDropdown" data-dropdown-id="dropdown-menu3">
+  <ul>
+    <li class="toSlide-1">Slide 1</li>
+    <li class="toSlide-2">Slide 2</li>
+    <li class="toSlide-3">Slide 3</li>
+    <li class="link"><a href="http://google.com" target="_blank">Exernal Link</a></li>
+  </ul>
+</div>
+
 	<!-- HEADER -->
-	<section class="slide fade" data-name="home" id="">
+	<section class="slide fade autoHeight" data-name="home" id="">
 		<div class="content">
 			<div class="container" style="height: 560px;">
 				<div class="wrap">
@@ -143,7 +167,7 @@
 		</div>
 		<div class="background" style="background-image:url(../../assets/img/backgrounds/goldengate.jpg)" alt="Foto av Golden Gate under sin konstruktion"></div>
 	</section>
-	<section class="slide whiteSlide">
+	<section class="slide whiteSlide autoHeight">
 		<div class="container">
 			<div class="wrap spaces">
 						<div class="fix-10-12 left">
