--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -71,8 +71,8 @@
 					<!-- <li><a href="#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="karriar/">Karriär</a></li>
 					<li><a href="kontakt/" class="text-blue">Kundkontakt</a></li> -->
-					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu">Vårt erbjudande<svg class="dropdown-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#drop-down"></use></svg></li>
-	        <li tabindex="2" class="dropdownTrigger" data-dropdown-id="dropdown-menu2">More on Click <svg class="dropdown-icon"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#drop-down"></use></svg></li>
+					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu">Vårt erbjudande</li>
+	        <li tabindex="2" class="dropdownTrigger" data-dropdown-id="dropdown-menu2">More on Click</li>
 				</ul>
 			</div>
 		</div>
