first slide text update 2

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 									<li><p class="small">Det ger er:</p></li>
 									<li><div class="checkmark"></div><p class="small">Sänkta kostnader i produktion och eftermarknad.</p></li>
 									<li><div class="checkmark"></div><p class="small" style="margin-left: 23px;">Möjlighet till färdigt projekt med noll byggfel <br>på avtalad dag.</p></li>
-									<li><div class="checkmark"></div><p class="small">Säker och lättillgänglig dokumentation.</p></li>
+									<li><div class="checkmark"></div><p class="small">Lättillgänglig dokumentation i vår portal.</p></li>
 									<li><div class="checkmark"></div><p class="small">Tillgång till byggfelsstatistik.</p></li>
 								</ul>
 								<a class="popupTrigger" data-popup-id="ispect-details"><p class="text-blue bold small margin-bottom-2">Mer om digitaliserad entreprenadbesiktning</p></a>
