--- a/tjanster/entreprenad/index.html
+++ b/tjanster/entreprenad/index.html
@@ -71,7 +71,7 @@
 					<!-- <li><a href="#erbjudande">Vårt erbjudande</a></li>
 					<li><a href="karriar/">Karriär</a></li>
 					<li><a href="kontakt/" class="text-blue">Kundkontakt</a></li> -->
-					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu">Vårt erbjudande</li>
+					<li tabindex="1" class="dropdownTrigger" data-dropdown-hover="true" data-dropdown-id="dropdown-menu-services">Vårt erbjudande</li>
 	        <li tabindex="2" class="dropdownTrigger" data-dropdown-id="dropdown-menu2">More on Click</li>
 				</ul>
 			</div>
@@ -121,11 +121,32 @@
 
 
 <!-- Menu dropdown -->
-<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu">
+<div class="dropdown top left center customDropdown" data-dropdown-id="dropdown-menu-services">
   <ul>
-    <li class=""><div class="checkmark"></div><a href="../tjanster/entreprenad">Entreprenad</a></li>
-    <li class=""><div class="checkmark"></div><a href="../tjanster/brf">Bostadsförening</a></li>
-    <li class=""><div class="checkmark"></div><a href="../tjanster/privat">Privat</a></li>
+	  <li>
+			<a href="../tjanster/entreprenad">
+				<div class="">
+					<img src="../../assets/svg/entreprenad.svg" alt=""  class="illustration-icon">
+					<p>Entreprenad</p>
+				</div>
+			</a>
+		</li>
+	  <li>
+			<a href="../tjanster/brf">
+				<div class="">
+					<img src="../../assets/svg/brf.svg" alt=""  class="illustration-icon">
+					<p>Bostadsrättsförening</p>
+				</div>
+			</a>
+		</li>
+	  <li>
+			<a href="../tjanster/privat">
+				<div class="">
+					<img src="../../assets/svg/house.svg" alt=""  class="illustration-icon">
+					<p>Privat</p>
+				</div>
+			</a>
+		</li>
   </ul>
 </div>
 
