added two new main header photos for the landing page, that can be switched between summer/winter

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="background" style="background-image:url(assets/img/backgrounds/goldengate.jpg)" alt="Foto av Golden Gate under sin konstruktion"></div>
+		<div class="background" style="background-image:url(assets/img/backgrounds/sodermalm_summer.jpg)" alt="Foto av Skinnerviksberget, Södermalm"></div>
 	</section>
 	<!-- ENTERPRISE START -->
 	<section class="slide whiteSlide fromLeft autoHeight" id="entreprenad">
