--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -253,8 +253,8 @@
       <div class="wrap">
 
         <div class="fix-10-12 center">
-					<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;">
-          <p>Sveriges ledande entreprenadbesiktningsföretag</p>
+					<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
+          <p class="bold">Sveriges ledande entreprenadbesiktningsföretag</p>
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
@@ -281,7 +281,7 @@
 </section>
 
 	<!-- POLICYS Popup Text -->
-	<div class="popup animated white" data-popup-id="policy">
+	<!-- <div class="popup animated white" data-popup-id="policy">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
 			<div class="container">
@@ -339,7 +339,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
