--- a/karriar/index.html
+++ b/karriar/index.html
@@ -207,8 +207,8 @@
       <div class="wrap">
 
         <div class="fix-10-12 center">
-					<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;">
-          <p>Sveriges ledande entreprenadbesiktningsföretag</p>
+					<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
+          <p class="bold">Sveriges ledande entreprenadbesiktningsföretag</p>
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
