--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -177,13 +177,16 @@
       <div class="wrap">
 
         <div class="fix-10-12 center">
-					<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;">
-          <p>Sveriges ledande entreprenadbesiktningsföretag</p>
+					<img src="../assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;" class="margin-bottom-1">
+          <p class="bold">Sveriges ledande entreprenadbesiktningsföretag</p>
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
-              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">
-Heleneborgsgatan 54, 117 32 Stockholm</p></a>
+              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn">
+								<p class="text-blue bold">
+									Heleneborgsgatan 54, 117 32 Stockholm
+								</p>
+							</a>
 							<a href="tel:0101654000"><p class="text-blue bold">Telefon: 010-165 40 00</p></a>
             </li>
             <li class="col-6-12 ae-5">
